--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </div>
 
         <div class="labels">
-            <span id="playerLabel">Player Scores</span>
-            <span id="compLabel">Computer Scores</span>
+            <span id="playerLabel">Player Score</span>
+            <span id="compLabel">Computer Score</span>
         </div>
 
         <div class="scores">
